# remotex

./: .gitignore  404.html  CLA.md  CNAME  CONTRIBUTING.md  INSTALL_MAC.md  LICENSE  LICENSE-PRO.md  README.md  com.github.remotex.RemoteX.yml  index.html  mcp_gemma4_tests.md  mcp_test_results.md  mcp_test_runner.py  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  requirements.txt  run_dev.sh  sitemap.xml
.github/workflows/: docs.yml
appearance/: index.html
build-aux/flatpak/: gen-deps.sh
buttons/: index.html
categories/: index.html
commandeck_core/: i18n.py
commandeck_core/models/: _default_buttons.py  command_button.py  config.py
commandeck_core/platform/: __init__.py  android.py  base.py  linux.py  macos.py  windows.py
commandeck_core/services/: executor.py  password_store.py  secret_store.py
commandeck_core/translations/: ar.json  de.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
commandeck_core/utils/: exec_log.py  sandbox.py  threading.py
commandeck_qt/: __main__.py  _version.py  app.py  button_tile.py  flow_layout.py  secret_warning.py  settings.py  threading_qt.py  window.py
commandeck_qt/dialogs/: command_dialog.py  confirm_dialog.py  machine_dialog.py  machine_picker_dialog.py  machines_list_dialog.py  output_dialog.py  preferences_dialog.py  profile_dialog.py  profiles_list_dialog.py
commandeck_qt/resources/style/: base.qss
data/: com.github.remotex.RemoteX.desktop.in  com.github.remotex.RemoteX.gschema.xml  com.github.remotex.RemoteX.metainfo.xml.in  gschemas.compiled  meson.build
data/resources/: remotex.gresource  remotex.gresource.xml  style.css
data/resources/ui/: button_tile.ui  shortcuts_window.ui  window.ui
docs/: appearance.md  buttons.md  categories.md  first-button.md  glossary.fr.md  glossary.md  index.fr.md  index.md  installation.fr.md  installation.md  mcp.fr.md  mcp.md  multiselect.md  pro.fr.md  pro.md  quick-start.fr.md  quick-start.md  ssh.md
docs/legal/: privacy.fr.md  privacy.md  refund.fr.md  refund.md  terms.fr.md  terms.md
docs/pro/: activating-your-license.fr.md  activating-your-license.md  backup.fr.md  backup.md  license-devices.fr.md  license-devices.md  mcp.fr.md  mcp.md  multiselect.fr.md  multiselect.md  ssh.fr.md  ssh.md  themes.fr.md  themes.md
docs/reference/: button-editor.fr.md  button-editor.md  execution-profiles.fr.md  execution-profiles.md  main-window.fr.md  main-window.md  preferences.fr.md  preferences.md  security.fr.md  security.md  ssh-machines.fr.md  ssh-machines.md
docs/use-cases/: beginner.fr.md  beginner.md  dev-workflow.fr.md  dev-workflow.md  home-server.fr.md  home-server.md  homelab.fr.md  homelab.md  local-ai.fr.md  local-ai.md
first-button/: index.html
fr/: index.html
fr/appearance/: index.html
fr/buttons/: index.html
fr/categories/: index.html
fr/first-button/: index.html
fr/glossary/: index.html
fr/installation/: index.html
fr/legal/privacy/: index.html
fr/legal/refund/: index.html
fr/legal/terms/: index.html
fr/multiselect/: index.html
fr/pro/: index.html
fr/pro/activating-your-license/: index.html
fr/pro/backup/: index.html
fr/pro/license-devices/: index.html
fr/pro/mcp/: index.html
fr/pro/multiselect/: index.html
fr/pro/ssh/: index.html
fr/pro/themes/: index.html
fr/quick-start/: index.html
fr/reference/button-editor/: index.html
fr/reference/execution-profiles/: index.html
fr/reference/main-window/: index.html
fr/reference/preferences/: index.html
fr/reference/security/: index.html
fr/reference/ssh-machines/: index.html
fr/ssh/: index.html
fr/use-cases/beginner/: index.html
fr/use-cases/dev-workflow/: index.html
fr/use-cases/home-server/: index.html
fr/use-cases/homelab/: index.html
glossary/: index.html
installation/: index.html
legal/privacy/: index.html
legal/refund/: index.html
legal/terms/: index.html
multiselect/: index.html
packaging/linux/: Commandeck.spec  build_appimage.sh
packaging/macos/: Commandeck.spec  build_app.sh  create_dmg.sh
packaging/windows/: Commandeck.spec  installer.iss
po/: POTFILES.in  meson.build
pro/: index.html
pro/activating-your-license/: index.html
pro/backup/: index.html
pro/license-devices/: index.html
pro/mcp/: index.html
pro/multiselect/: index.html
pro/ssh/: index.html
pro/themes/: index.html
quick-start/: index.html
reference/button-editor/: index.html
reference/execution-profiles/: index.html
reference/main-window/: index.html
reference/preferences/: index.html
reference/security/: index.html
reference/ssh-machines/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/appearance/: index.html
site/buttons/: index.html
site/categories/: index.html
site/first-button/: index.html
site/installation/: index.html
site/mcp/: index.html
site/multiselect/: index.html
site/pro/: index.html
site/quick-start/: index.html
site/search/: search_index.json
site/ssh/: index.html
src/: button_tile.py  feature_gate.py  i18n.py  main.py  mcp_server.py  meson.build  remotex.in  window.py
src/dialogs/: command_dialog.py  confirm_dialog.py  machine_dialog.py  machine_picker_dialog.py  machines_list_dialog.py  output_dialog.py  preferences_dialog.py  profile_dialog.py  profiles_list_dialog.py
src/models/: __init__.py  _default_buttons.py  command_button.py  config.py  execution_profile.py  machine.py
src/pro/: __init__.py  license.py
src/services/: executor.py  keyring_service.py  password_store.py  ssh_key_service.py  ssh_service.py
src/translations/: ar.json  de.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/utils/: desktop.py  icon_loader.py  threading.py
ssh/: index.html
tests/: test_config.py  test_executor.py  test_i18n.py  test_license.py  test_mcp.py  test_models.py  test_profiles.py
use-cases/beginner/: index.html
use-cases/dev-workflow/: index.html
use-cases/home-server/: index.html
use-cases/homelab/: index.html
use-cases/local-ai/: index.html
(+12 files in other folders)
