[project]
name = "commandeck"
version = "2.0.0"
description = "Commandeck — graphical remote control for local and SSH commands"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7",
    "fabric>=3.0",
    "tomli_w",
    "keyring",
    "paramiko",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["commandeck_core*", "commandeck_qt*"]
